tests/invalid/syntax/union_no_variants.fig
// INVALID: union with no variants
// Expected parse error: at least one variant required in union body
union Empty
